# CPUSim

./: CMakeLists.txt  CMakePresets.json  README.md  memory.txt
.github/workflows/: main.yml
data/: data.bin.dump  data.txt  data.txt.dump  instructions.txt  instructions.txt.dump  program.asm  program.bin.dump  reg.dump  registers.bin.dump  registers.txt  registers.txt.dump
include/: alu.h  constants.h  controlunit.h  csrfile.h  exceptions.h  file.hpp  fileiounit.hpp  immgen.h  immgenunit.h  instruction.h  instructionfile.h  maskingunit.hpp  memoryfile.h  register.h  registerfile.h  riscinstructions.h  translator.h
src/: alu.cpp  controlunit.cpp  immgenunit.cpp  instructionfile.cpp  main.cpp  memoryfile.cpp  registerfile.cpp  riscinstructions.cpp  translator.cpp
tests/: alu_tests.cpp  controlunit_tests.cpp  instruction_parsing_tests.cpp  instruction_translating_tests.cpp
tests/memory/: appends_mem.txt  concat_mem.txt  fibs_mem copy.txt  fibs_mem.txt  fibs_mem.txt.bak  jumpifs_mem.txt  jumps_mem.txt  move_regs_mem.txt  move_vals_mem.txt  moves_mem.txt  noops_mem.txt  reads_mem.txt  test.asm  test_loads.asm  test_saves.asm  writes_mem.txt.bak  writes_mem_ref1.txt
tests/memory/instructions/readonly/: adds_mem.txt  comps_mem.txt  jumps_mem.txt
tests/memory/instructions/writers/: appends_mem.txt  appends_mem.txt.bak  clears_mem.txt.bak  read_chars_mem.txt  read_chars_mem.txt.bak  writes_mem_ref2.txt
tests/memory/routines/readonly/: eq_mem.txt  neg_mem.txt
tests/memory/routines/writers/: add_line_nums.txt  add_line_nums_mem.txt  add_line_nums_mem.txt.bak  compile_test.txt  div_mem.txt.bak  fibs_mem.txt  mul_mem.txt.bak  sub_mem.txt.bak
